(PC-39080)[PRO] fix: add overflow snackbar text

--- a/pro/src/design-system/SnackBar/SnackBar.module.scss
+++ b/pro/src/design-system/SnackBar/SnackBar.module.scss
@@ -33,6 +33,7 @@
 
       .content-text {
         color: var(--color-text-default);
+        overflow-wrap: anywhere;
 
         @include fonts.body-accent;
       }
